# NeoTeacher

Client/: CMakeLists.txt  debug.config.json  main.cpp
Client/src/: MainScheduler.cpp  MainScheduler.h  Setting.cpp  Setting.h  SystemController.cpp  SystemController.h  TransmissionControlProtocolSerial.cpp  TransmissionControlProtocolSerial.h  UserOperations.cpp  UserOperations.h  debug.config.json
Client/src/Request/: FileRequest.cpp  FileRequest.h  LoginRequest.cpp  MouseEventRequest.h  OKRequest.h  QuitRequest.cpp  QuitRequest.h  Request.cpp
NeoTeacherClient/: CMakeLists.txt  FileRequest.cpp  FileRequest.h  Request.cpp  Request.h  Setting.cpp  Setting.h  SystemController.cpp  SystemController.h  TransmissionControlProtocolSerial.cpp  TransmissionControlProtocolSerial.h  UserOperation.cpp  UserOperation.h  debug.config.json  main.cpp
NeoTeacherServer/: CMakeLists.txt  Client.cpp  Client.h  ClientList.cpp  ClientList.h  ClientManager.cpp  ClientManager.h  DataBaseSerial.cpp  DataBaseSerial.h  LogInRequest.cpp  LogInRequest.h  MainScheduler.cpp  MainScheduler.h  Request.cpp  Request.h  Setting.cpp  Setting.h  TransmissionControlProtocolSerial.cpp  TransmissionControlProtocolSerial.h  User.cpp  User.h  UserList.cpp  UserList.h  debug.config.json  main.cpp
Server/: CMakeLists.txt  debug.config.json  main.cpp
Server/src/: ClientManager.cpp  ClientManager.h  Setting.cpp  Setting.h  TransmissionControlProtocolSerial.cpp  TransmissionControlProtocolSerial.h
Server/src/Request/: ErrorRequest.cpp  ErrorRequest.h  HandInRequest.cpp  HandInRequest.h  HandUpRequest.cpp  HandUpRequest.h  LoginRequest.h  MouseEventRequest.cpp  OKRequest.cpp  Request.cpp  Request.h
