cmake_minimum_required(VERSION 3.12)
project(NeoTeacherClient)

set(CMAKE_CXX_STANDARD 17)

FIND_PACKAGE(PkgConfig REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(XShm REQUIRED)
FIND_PACKAGE(X11 REQUIRED)
FIND_PACKAGE(Threads REQUIRED)
PKG_CHECK_MODULES(JSON REQUIRED jsoncpp)

MESSAGE(STATUS "----- JSONCPP -----")
MESSAGE(STATUS "${JSON_VERSION}")
MESSAGE(STATUS "${JSON_INCLUDE_DIRS}")
MESSAGE(STATUS "${JSON_LIBRARY_DIRS}")
MESSAGE(STATUS "${JSON_CFLAGS_OTHERS}")
MESSAGE(STATUS "${JSON_LIBRARIES}")

MESSAGE(STATUS "----- X11 -----")
MESSAGE(STATUS "${X11_VERSION}")
MESSAGE(STATUS "${X11_INCLUDE_DIRS}")
MESSAGE(STATUS "${X11_LIBRARY_DIRS}")
MESSAGE(STATUS "${X11_CFLAGS_OTHERS}")
MESSAGE(STATUS "${X11_LIBRARIES}")

MESSAGE(STATUS "----- OpenCV -----")
MESSAGE(STATUS "${OpenCV_VERSION}")
MESSAGE(STATUS "${OpenCV_INCLUDE_DIRS}")
MESSAGE(STATUS "${OpenCV_LIBRARY_DIRS}")
MESSAGE(STATUS "${OpenCV_CFLAGS_OTHERS}")
MESSAGE(STATUS "${OpenCV_LIBRARIES}")

INCLUDE_DIRECTORIES(${JSON_INCLUDE_DIRS})
LINK_DIRECTORIES(${JSON_LIBRARY_DIRS})
ADD_DEFINITIONS(${JSON_CFLAGS_OTHER})

INCLUDE_DIRECTORIES(${X11_INCLUDE_DIRS})
LINK_DIRECTORIES(${X11_LIBRARY_DIRS})
ADD_DEFINITIONS(${X11_CFLAGS_OTHER})

INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
LINK_DIRECTORIES(${OpenCV_LIBRARY_DIRS})
ADD_DEFINITIONS(${OpenCV_CFLAGS_OTHER})

add_executable(${PROJECT_NAME} main.cpp TransmissionControlProtocolSerial.cpp TransmissionControlProtocolSerial.h Setting.cpp Setting.h Request.cpp Request.h SystemController.cpp SystemController.h FileRequest.cpp FileRequest.h UserOperation.cpp UserOperation.h)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${JSON_LIBRARIES} ${X11_LIBRARIES} ${OpenCV_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})